<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EmiDetailsFragment">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/large"
                android:shrinkColumns="1"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        style="@style/TextAppSmallRegular"
                        android:padding="@dimen/extra_small"
                        android:text="@string/total_emi" />

                    <TextView
                        android:id="@+id/totalEmi"
                        style="@style/TextAppSmallBold"
                        android:layout_gravity="center_vertical|end"
                        android:text="00" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/TextAppSmallRegular"
                        android:padding="@dimen/extra_small"
                        android:text="@string/emi_paid" />

                    <TextView
                        android:id="@+id/emiPaid"
                        style="@style/TextAppSmallBold"
                        android:layout_gravity="center_vertical|end"
                        android:text="00" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/TextAppSmallRegular"
                        android:padding="@dimen/extra_small"
                        android:text="@string/pending_emi" />

                    <TextView
                        android:id="@+id/pendngEmi"
                        style="@style/TextAppSmallBold"
                        android:layout_gravity="center_vertical|end"
                        android:text="00" />
                </TableRow>
            </TableLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                app:cardBackgroundColor="?colorTertiaryContainer"
                app:cardCornerRadius="@dimen/small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/monthlyEmiAmount"
                        style="@style/TextAppMediumSemiBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_rupee"
                        android:textSize="@dimen/text_32" />

                    <TextView
                        android:id="@+id/txtFreq"
                        style="@style/TextAppSmallRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency" />
                    <TextView
                        android:id="@+id/txtMode"
                        style="@style/TextAppSmallRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_mode" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginTop="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                android:elevation="@dimen/small"
                app:cardBackgroundColor="?colorSurface"
                app:cardCornerRadius="@dimen/small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginBottom="@dimen/large"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppAction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/small"
                            android:layout_marginEnd="@dimen/small"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/baseline_square"
                            android:drawablePadding="@dimen/medium"
                            android:drawableTint="?colorErrorContainer"
                            android:text="@string/text_due_emi" />

                        <androidx.constraintlayout.utils.widget.MotionButton
                            android:id="@+id/payEmi"
                            style="@style/ButtonStyleLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/small"
                            android:layout_marginEnd="@dimen/small"
                            android:text="Pay now" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/extra_small"
                        android:background="?colorErrorContainer" />

                    <FrameLayout
                        android:id="@+id/due_emi_fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large"
                android:elevation="@dimen/small"
                app:cardBackgroundColor="?colorSurface"
                app:cardCornerRadius="@dimen/small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:layout_marginBottom="@dimen/large"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppAction"
                        android:id="@+id/lastPaidEmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small"
                        android:drawableStart="@drawable/baseline_square"
                        android:drawablePadding="@dimen/medium"
                        android:drawableTint="?colorPrimaryContainer"
                        android:text="@string/text_paid_emi" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/extra_small"
                        android:background="?colorPrimaryContainer" />

                    <FrameLayout
                        android:id="@+id/paid_emi_fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>